# mibar

./: Cargo.toml  README.md  install.sh
bar/: Cargo.toml
bar/src/: main.rs
core/: Cargo.toml
core/src/: asset_loader.rs  client.rs  draw.rs  event_queue.rs  geometry.rs  image.rs  lib.rs  task.rs  theme.rs  ui.rs  widget_tree.rs
core/src/reactive/: action.rs  event_emitter.rs  mod.rs  reactive_list.rs
core/src/renderer/: image_cache.rs  mod.rs  text.rs
core/src/wayland/: bar.rs  bar_window.rs  layer_shell_window.rs  mod.rs  panel.rs  popup.rs  side_panel.rs  wayland_window.rs
core/src/widget/: button.rs  container.rs  element_tuple.rs  flex.rs  image.rs  layout.rs  mod.rs  size_constraints.rs  state.rs  text.rs
examples/: dynamic_list.rs
module/: Cargo.toml
module/src/: battery.rs  cpu.rs  date_time.rs  hyprland.rs  keyboard_layout.rs  lib.rs  ram.rs  sender_key.rs  system_monitor.rs
module/src/sys_info/: cpu.rs  mod.rs  ram.rs
module/src/tray/: com.canonical.dbusmenu.xml  dbus_menu.rs  host.rs  mod.rs  status_notifier_item.rs  status_notifier_watcher.rs  watcher.rs  widget.rs
module/src/tray/widget/: icon.rs  mod.rs
module/src/volume/: mod.rs  pulseaudio.rs
module/src/workspaces/: button.rs  hyprland.rs  mod.rs
src/: bar.rs  color.rs  draw.rs  geometry.rs  gradient.rs  lib.rs  main.rs  positioner.rs  renderer.rs  theme.rs  ui.rs
src/modules/: battery.rs  cpu.rs  date_time.rs  mod.rs  ram.rs
src/modules/volume/: mod.rs  pulseaudio.rs
src/modules/workspaces/: button.rs  hyprland.rs  mod.rs
src/renderer/: cache.rs  mod.rs  renderer.rs  text.rs
src/sys_info/: battery.rs  cpu.rs  date.rs  mod.rs  ram.rs
src/wayland/: mod.rs
src/widget/: bar.rs  cpu.rs  date_time.rs  flex.rs  mod.rs  music.rs  ram.rs  size_constraints.rs  text.rs  workspaces.rs
