[package]
name = "mibar"
description = "A set of libraries for building status bars and desktop widgets on Wayland"
version.workspace = true
edition.workspace = true

[dependencies]
mibar-core.workspace = true
mibar-module.workspace = true

[workspace]
members = [
    "core",
    "module",
    "bar"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
mibar = { path = "." }
mibar-core = { path = "core" }
mibar-module = { path = "module" }
tokio = { version = "1.35.1", default-features = false, features = ["full"] }
smallvec = { version = "1.11.2", default-features = false, features = ["const_new", "union"]}
